--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,7 @@ dependencies:
   font_awesome_flutter: ^10.8.0
   video_player: ^2.9.5
   visibility_detector: ^0.4.0+2
+  google_fonts: ^6.2.1
 
 dev_dependencies:
   flutter_test:
