--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   video_player: ^2.9.5
   visibility_detector: ^0.4.0+2
   google_fonts: ^6.2.1
+  go_router: ^15.1.2
 
 dev_dependencies:
   flutter_test:
