--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -44,6 +44,8 @@ dependencies:
   visibility_detector: ^0.4.0+2
   google_fonts: ^6.2.1
   go_router: ^15.1.2
+  camera: ^0.11.1
+  permission_handler: ^12.0.0+1
 
 dev_dependencies:
   flutter_test:
