--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -46,6 +46,7 @@ dependencies:
   go_router: ^15.1.2
   camera: ^0.11.1
   permission_handler: ^12.0.0+1
+  image_gallery_saver_plus: ^4.0.1
 
 dev_dependencies:
   flutter_test:
