--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -47,6 +47,7 @@ dependencies:
   camera: ^0.11.1
   permission_handler: ^12.0.0+1
   image_gallery_saver_plus: ^4.0.1
+  image_picker: ^1.1.2
 
 dev_dependencies:
   flutter_test:
