--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -48,6 +48,7 @@ dependencies:
   permission_handler: ^12.0.0+1
   image_gallery_saver_plus: ^4.0.1
   image_picker: ^1.1.2
+  provider: ^6.1.5
 
 dev_dependencies:
   flutter_test:
